packages/typ/tests/fixtures/diagnostics/0277_fun_explicit_poly_returns_bool_04.ml.infer.expected
File "0277_fun_explicit_poly_returns_bool_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0277_fun_explicit_poly_returns_bool_04 is not a valid module name.

File "0277_fun_explicit_poly_returns_bool_04.ml", line 1, characters 31-44:
1 | let bad_delta : 'a. 'a -> 'a = fun _ -> true
                                   ^^^^^^^^^^^^^
Error: This definition has type bool -> bool which is less general than
         'a. 'a -> 'a
       The type bool is not a type variable.
